<resources>
    <string name="app_name">Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="bank">BANK</string>
    <string name="account">ACCOUNTNUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="order_amount">ORDERAMOUNT</string>
    <string name="shipping_cost">SHIPPINGCOST</string>
    <string name="total">TOTAL</string>
    <string name="order_amount_value">VALUE</string>
    <string name="shipping_cost_value">VALUE</string>
    <string name="total_value">TOTALVALUE</string>
    <string name="order_detail">Order Detail</string>
    <string name="order">Order</string>
    <string name="confirm">confirm</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_order">NEW ORDER</string>
    <string name="completed">COMPLETED</string>
    <string name="status">STATUS</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="order_id">#ODERID</string>
    <string name="date_and_time">DATEANDTIME</string>
    <string name="check_transfer">check transfer</string>
    <string name="name_store">STORE</string>

</resources>